force-app/main/default/objects/LetterStream_Insert__c/LetterStream_Insert__c.object-meta.xml
<CustomObject>
    <description>Place to store Inserts that we send through letterstream, for example welcome letters with CS Bills</description>
    <label>LetterStream Insert</label>
    <nameField>
        
        <label>LetterStream Insert Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>LetterStream Inserts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>