force-app/main/default/objects/LetterStream_Insert__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>The ZuoraInvoiceTrigger only matches active inserts for first bill inserts</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>