force-app/main/default/objects/LetterStream_Insert__c/fields/Anchor__c.field-meta.xml
<CustomField>
    <fullName>Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this is a template to be used for Anchors.</inlineHelpText>
    <label>Anchor</label>
    <type>Checkbox</type>
</CustomField>