force-app/main/default/objects/LetterStream_Insert__c/fields/Client_Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand_Key__c</fullName>
    <label>Client Brand Key</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Logo_Filenames</valueSetName>
        
        </valueSet>
</CustomField>