force-app/main/default/objects/LetterStream_Insert__c/fields/Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_ID__c</fullName>
    <inlineHelpText>Used when sending via email</inlineHelpText>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>