force-app/main/default/objects/LetterStream_Insert__c/fields/Letterstream_ID__c.field-meta.xml
<CustomField>
    <fullName>Letterstream_ID__c</fullName>
    <inlineHelpText>Id of the insert in Letterstream, used during paper mail send</inlineHelpText>
    <label>Letterstream ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>