force-app/main/default/objects/LetterStream_Insert__c/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <label>Product Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Program</valueSetName>
    </valueSet>
</CustomField>