force-app/main/default/objects/LetterStream_Insert__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>LetterStream Inserts</relationshipLabel>
    <relationshipName>LetterStream_Inserts</relationshipName>
    <type>Lookup</type>
</CustomField>